8150543: Mismatched access detection is inaccurate

Reviewed-by: kvn, shade